Weird thing where git wasn't pushing to the repo Git stopped working so I have a load of updates all at once. I have added a center-box layout that eveything uses now. This layout uses the defaut layout and basically just wraps everything in a center box div rather than having to do that on every page. I have also added a blog using jekyll

--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,6 @@ html, body{
   margin: 0;
   font-family: "sans-serif";
 }
-p, h1, h2, h3, h4, h5, h6{
-  margin: 0;
-}
 #outer-content{
   background: url({{site.url}}/assets/img/science.jpg) no-repeat;
 
@@ -35,13 +32,18 @@ p, h1, h2, h3, h4, h5, h6{
   margin: 0;
 }
 .center-box{
-  margin-top: 5%;
   margin-right: 0;
+  margin-top: 5%;
   padding: 1em;
-  background-color: #{{page.background-color}};
+  background-color: rgba(24,24,24,0.9);
   border-radius: 3px;
   border: 1px solid #{{page.forground-color-dark}};
   box-sizing: border-box;
+}
+@media (max-width:600px) {
+  .center-box{
+    margin-top: 1px;
+  }
 }
 #contact-form textarea{
   height: 5em;
@@ -63,4 +65,13 @@ p, h1, h2, h3, h4, h5, h6{
 }
 .navbar-default .navbar-nav>li>a:hover{
   color: #fff;
+}
+.center-box .row{
+  margin-bottom: 1em;
+}
+#a-level{
+  width: 100%;
+}
+#a-level tr td:nth-child(2){
+  margin-right: 0;
 }
